--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "twilio-video": "^2.17.1",
